--- a/src/styles/ProductPage.module.css
+++ b/src/styles/ProductPage.module.css
@@ -25,5 +25,5 @@
   display: grid;
   gap: 1em;
   grid-auto-rows: 26.2rem;
-  grid-template-columns: repeat(auto-fit, minmax(min(18.8rem, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(18.8rem, 100%), 1fr));
 }
