--- a/src/styles/ProductPage.module.css
+++ b/src/styles/ProductPage.module.css
@@ -27,3 +27,8 @@
   grid-auto-rows: 26.2rem;
   grid-template-columns: repeat(auto-fill, minmax(min(18.8rem, 100%), 1fr));
 }
+
+.productItem {
+  text-decoration: none;
+  color: var(--black);
+}
