--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,6 +1,20 @@
-.cart {
+.cartContainer {
   cursor: pointer;
   position: relative;
+}
+
+.cartContainer::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  content: '';
+  background-color: transparent;
+  aspect-ratio: 1/1;
+  width: 5rem;
+}
+
+.cartContainer:hover .cartDropdown {
+  display: grid;
 }
 
 .cart span {
@@ -24,20 +38,24 @@
 
 .cartDropdown {
   z-index: 999;
-  aspect-ratio: 5/4;
   border-radius: 6px;
-  width: min(36.6rem, 100%);
   position: absolute;
-  top: 5.8rem;
-  right: 0;
+  width: 36.6rem;
+  height: 25rem;
+  top: 3.8rem;
+  right: -7.8rem;
   padding: 1.5em;
   background-color: var(--white);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
   overflow-y: auto;
-  display: grid;
+  display: none;
   grid-template-rows: 3rem 1fr;
   grid-template-areas: 'header' 'cart-list';
+}
+
+.cartDropdown::-webkit-scrollbar {
+  display: none;
 }
 
 .cartDropdown::after {
